# efcf-framework

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  EXPERIMENTS.md  LICENSE  Makefile  README.md  container.Makefile  sol.Makefile
docker/: .gitignore  arch.Dockerfile  fedora.Dockerfile  ubuntu.Dockerfile
results/: ethbmc-missedbugs-contracts.txt  ethbmc-timeouts-buglist-analysis.xlsx  ethbmc-timeouts.summary.csv  ethbmc-vuln.summary.csv  fuzz-multi-2021-11-24.csv  fuzz-multi-2022-04-16.csv  fuzz-multi-4core-2022-04-16.csv  fuzz-multi-4core-2022-05-02.csv  fuzz-multi-8core-2021-11-24.csv  fuzz-multi-8core-2022-04-25.csv  fuzz-multi-modes.csv  fuzz-multi-noabi-2022-06-05.csv  fuzz-multi-staged-2021-10-01.csv  fuzz-tests.csv  fuzz-throughput-2021-12-11.csv  fuzz-throughput.csv  known_honeypots.csv  livestate_analysis.ipynb  sailfish-dao-tp.csv  tests_analysis.ipynb  throughput_analysis.ipynb  tools-multi-jammy-part1.csv  tools-multi-stats.csv  tools-throughput.summary.csv  tools_properties.md
scripts/: anon-tarball.sh  build-multi.sh  build-reentrancy.sh  build-smartbugs-top-1000-balance.sh  build-tests-not-vuln.sh  build-tests.sh  build-throughput.sh  bump-all-src-commits.sh  ci-sanity-check.sh  ci-test-wrapper.sh  common.sh  concat-abis.py  env.fish  env.sh  fuzz-multi.sh  (+25 more)
src/launcher/: .gitignore  Pipfile  pyproject.toml  setup.cfg  setup.py
src/launcher/efcfuzz/: builder.py  compile_eevm_state.py  continousfuzz.py  convert_state.py  dump_state_from_geth.py  ethbmc_integration.py  fuzzer.py  main.py  make_dict_for_state.py  meta.py  state.py  utils.py
(+345 files in other folders)
