[metadata]
name = efcfuzz
version = 0.0.3
author = Michael Rodler
author_email = contact@f0rki.at
description = Launcher for the EF/CF fuzzer

[options]
packages = efcfuzz
install_requires = 
    requests
    coloredlogs
    py-solc-x
    tqdm
    eth-utils
    eth-hash[pycryptodome]
    msgpack

[options.entry_points]
console_scripts =
    efcfuzz = efcfuzz.main:launch
    efcf-compile-state = efcfuzz.compile_eevm_state:main
    efcf-dump-state = efcfuzz.dump_state_from_geth:main
    efcf-convert-state = efcfuzz.convert_state:main
    efcf-continous-fuzz = efcfuzz.continousfuzz:main
